@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2022-01-03 r81435) -- "Unsuffered Consequences"
+R Under development (unstable) (2022-02-22 r81797) -- "Unsuffered Consequences"
 Copyright (C) 2022 The R Foundation for Statistical Computing
 Platform: aarch64-apple-darwin21.2.0 (64-bit)
 
@@ -8233,4 +8233,22 @@ a$b
 > quote(`=`(`$`(1, `$`(2, repeat 3)), 4))
 `$`(1, `$`(2, repeat 3)) = 4
 > ## these were really bad in  R <= 4.1.x
+> 
+> 
+> ## Deparsing of !  -- PR#18284
+> ## no parens in 3.5.0 <= R <= 4.1.x:
+> quote(1 +  `!`(2) + 3) -> x; x
+1 + (!2) + 3
+> quote(1 + +`!`(2) + 3)
+1 + +(!2) + 3
+> quote(1 + `!`(!2) + 3)
+1 + (!!2) + 3
+> quote(1 + `!`(if(L) 2) + 3)
+1 + (!if (L) 2) + 3
+> ## ok in 3.5.0 <= R <= 4.1.x:
+> quote(`&`(a < !b, d))
+a < !b & d
+> ## deparse--parse roundtrip is stable (basically)
+> stopifnot(eval(x) == 4, eval(parse(text = deparse(x))) == 4)
+> ## eval()ed to 1 since R 3.5.0 {also because of the weak precedence of `!`}
 > 
